--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@tauri-apps/api": "^1",
+    "@types/store": "^2.0.5",
+    "@vueuse/core": "^10.11.0",
+    "ant-design-vue": "^4.2.3",
+    "dexie": "^4.0.8",
+    "store": "^2.0.12",
     "tesseract.js": "^5.1.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
     "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.22"
