--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^10.11.0",
     "ant-design-vue": "^4.2.3",
     "dexie": "^4.0.8",
+    "mitt": "^3.0.1",
     "store": "^2.0.12",
     "tesseract.js": "^5.1.0",
     "vue": "^3.3.4"
