--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@types/store": "^2.0.5",
     "@vueuse/core": "^10.11.0",
     "ant-design-vue": "^4.2.3",
+    "axios": "^1.7.3",
+    "dayjs": "^1.11.12",
     "dexie": "^4.0.8",
+    "md-editor-v3": "^4.18.0",
     "mitt": "^3.0.1",
     "store": "^2.0.12",
     "tesseract.js": "^5.1.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
