--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ tauri = { version = "1", features = [ "global-shortcut-all", "fs-all", "shell-op
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = "0.4.38"
+jieba-rs = { version = "0.7", features = ["tfidf", "textrank"] }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
