--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dexie": "^4.0.8",
     "md-editor-v3": "^4.18.0",
     "mitt": "^3.0.1",
+    "pinia": "^2.2.1",
     "store": "^2.0.12",
     "tesseract.js": "^5.1.0",
     "vue": "^3.3.4",
