--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.12",
     "dexie": "^4.0.8",
+    "lodash": "^4.17.21",
     "md-editor-v3": "^4.18.0",
     "mitt": "^3.0.1",
     "pinia": "^2.2.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
+    "@types/lodash": "^4.17.7",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.20",
