--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,13 +11,14 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "notification-all", "window-all", "path-all", "system-tray", "global-shortcut-all", "fs-all", "shell-open"] }
+tauri = { version = "1", features = [ "notification-all", "window-all", "path-all", "system-tray", "fs-all", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = "0.4.38"
 jieba-rs = { version = "0.7", features = ["tfidf", "textrank"] }
-screenshots = "0.5.4"
 base64 = "0.22.1"
+xcap = "0.0.1"
+tesseract = "0.15.1"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
