--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "pinia": "^2.2.1",
     "store": "^2.0.12",
     "uuid": "^10.0.0",
+    "v-viewer": "^3.0.11",
+    "viewerjs": "^1.11.6",
     "vue": "^3.3.4",
     "vue-router": "4",
     "vuetify": "^3.7.0"
